--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.0",
     "eslint": "^8.7.0",
-    "nodemon": "^2.0.15"
+    "jest": "^27.4.7",
+    "nodemon": "^2.0.15",
+    "supertest": "^6.2.2"
   },
   "repository": {
     "type": "git",
