--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node index.js",
     "migrate": "knex migrate:latest",
     "seed": "knex seed:run",
-    "ketchup": "git fetch && git reset --hard origin/lecture"
+    "ketchup": "git fetch && git reset --hard origin/lecture",
+    "test": "jest"
   },
   "dependencies": {
     "dotenv": "^14.3.2",
