--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "migrate": "knex migrate:latest",
     "seed": "knex seed:run",
     "ketchup": "git fetch && git reset --hard origin/lecture",
-    "test": "jest --verbose --runInBand"
+    "test": "NODE_ENV=testing jest --verbose --runInBand"
   },
   "dependencies": {
     "dotenv": "^14.3.2",
