--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "migrate": "knex migrate:latest",
     "seed": "knex seed:run",
     "ketchup": "git fetch && git reset --hard origin/lecture",
-    "test": "NODE_ENV=testing jest --verbose --runInBand"
+    "test": "cross-env NODE_ENV=testing jest --verbose --runInBand"
   },
   "dependencies": {
     "dotenv": "^14.3.2",
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/jest": "^27.4.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.7.0",
     "jest": "^27.4.7",
     "nodemon": "^2.0.15",
