--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node index.js",
     "migrate": "knex migrate:latest",
     "seed": "knex seed:run",
-    "ketchup": "git fetch && git reset --hard origin/lecture"
+    "ketchup": "git fetch && git reset --hard origin/lecture",
+    "test": "cross-env NODE_ENV=testing jest --verbose --runInBand"
   },
   "dependencies": {
     "dotenv": "^14.3.2",
@@ -15,8 +16,13 @@
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.7.0",
-    "nodemon": "^2.0.15"
+    "jest": "^27.4.7",
+    "knex-cleaner": "^1.3.1",
+    "nodemon": "^2.0.15",
+    "supertest": "^6.2.2"
   },
   "repository": {
     "type": "git",
